@@ -20,6 +20,7 @@ Version 1.5.13+svn:
    * Fixed bug #13123: When you're downloading add-ons they do not appear in
      the campaigns list until BfW is restarted
    * The size of the message dialogs now really depends on the size of the map
+   * Started with a new layout engine for the new widgets (bug #13180)
  * Miscellaneous and bug fixes:
    * Fix another campaign replay bug (#13139)
    * Fix WML [advancefrom] bug (#13176)
